# c-raytracer

./: CMakeLists.txt  README.md  main.cpp  math.h  vec2.h  vec3.h  vec4.h  vector.h
